--- a/C++/makefile
+++ b/C++/makefile
@@ -1,2 +1,3 @@
 all:
-	g++ problem29.cc -std=c++11 -Wall
+	g++ problem29.cc -std=c++11 -Wall -o problem29.out
+	g++ problem11.cc -std=c++11 -Wall -o problem11.out
