refactored the C++ solution format to make things easier in the future.

--- a/C++/makefile
+++ b/C++/makefile
@@ -1,3 +1,3 @@
 all:
-	g++ problem29.cc -std=c++11 -Wall -o problem29.out
-	g++ problem11.cc -std=c++11 -Wall -o problem11.out
+	g++ problem29.cc -std=c++11 -Wall -o bin/problem29.out
+	g++ problem11.cc -std=c++11 -Wall -o bin/problem11.out
