new solutions - new languages

--- a/C++/makefile
+++ b/C++/makefile
@@ -1,3 +1,4 @@
+options = -std=c++11 -Wall -O3
 all:
-	g++ problem29.cc -std=c++11 -Wall -o bin/problem29.out
-	g++ problem11.cc -std=c++11 -Wall -o bin/problem11.out
+	g++ problem29.cc ${options} -o bin/problem29.out
+	g++ problem11.cc ${options} -o bin/problem11.out
