--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,25 @@
 
 .ycm_extra_conf.py
 
+### CommonLisp ###
+*.FASL
+*.fasl
+*.lisp-temp
+*.dfsl
+*.pfsl
+*.d64fsl
+*.p64fsl
+*.lx64fsl
+*.lx32fsl
+*.dx64fsl
+*.dx32fsl
+*.fx64fsl
+*.fx32fsl
+*.sx64fsl
+*.sx32fsl
+*.wx64fsl
+*.wx32fsl
+
 ### C++ ###
 # Prerequisites
 *.d
